--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 .vs/
-IronXLBugTestsApp/bin
-IronXLBugTestsApp/obj
+AreaChartExample/bin
+AreaChartExample/obj
+PieChartExample/bin
+PieChartExample/obj
